<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<!--android:checkableBehavior="single" -->
    <group android:title="@string/games_button">
		<item
			android:id="@+id/navigation_item_caishu_games"
			android:title="@string/title_games_activity"
			android:icon="@drawable/ic_games"/>
			<!--app:actionLayout="@layout/empty"-->
		<item
			android:id="@+id/navigation_item_my_world"
			android:title="@string/title_my_world"
			android:icon="@mipmap/my_world"/>
	</group>
	<group>
		<item
			android:id="@+id/navigation_item_urllist"
			android:title="@string/title_urllist"
			android:icon="@drawable/ic_web"/>
		<item
			android:id="@+id/navigation_item_test"
			android:title="@string/title_test"
			android:icon="@drawable/ic_test"/>
		<item 
			android:id="@+id/navigation_item_debug"
			android:title="@string/title_debug"
			android:icon="@drawable/ic_info"/>
		<item 
			android:id="@+id/navigation_item_exit"
			android:title="@string/exit"
			android:icon="@drawable/ic_exit"/>
	</group>

</menu>
