<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/shot_item"
		android:showAsAction="never"
		android:title="@string/debug_save_share"/>
    <item 
		android:id="@+id/force_exit_item"
		android:title="@string/force_exit"
		android:showAsAction="never"/>
	<item
		android:id="@+id/source_item"
		android:showAsAction="never"
		android:title="@string/source_string"/>
<!--
    <item
        android:id="@+id/search_action"
        android.icon="@drawable/ic_action_search"
        android:title="@string/search_action_title"/>

    <item
        android:id="@+id/settings_action"
        android:showAsAction="never"
        android:title="@string/settings_action_title"/>
    <item
        android:id="@+id/exit_action"
        android:showAsAction="never"
        android:title="@string/exit"/>
	-->
</menu>
