<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="test.xjl12.soeasy.GamesActivity"
    tools:showIn="@layout/games">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/md_16"
        android:paddingTop="@dimen/md_16"
        android:paddingRight="@dimen/md_16"
        android:paddingBottom="@dimen/md_16"
        android:orientation="vertical"
        android:gravity="top|center">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/games_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/widget_space"
            android:layout_marginTop="@dimen/widget_space"
            android:id="@+id/games_MainTextView"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/widget_space"
            android:id="@+id/games_point_info"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="5">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_width="match_parent"
                android:hint="@string/games_edittext"
                android:gravity="center"
                android:id="@+id/games_m_input"
                android:imeOptions="actionSend" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_height="wrap_content"
            android:text="@string/games_submit_button"
            android:layout_width="wrap_content"
            android:ems="12"
            android:id="@+id/games_submit" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/games_see_answers"
            android:layout_width="wrap_content"
            android:ems="12"
            android:onClick="games_see_answers"
            android:id="@+id/games_see_answers" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/games_restart_button"
            android:layout_width="wrap_content"
            android:ems="12"
            android:onClick="games_restart" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/games_exit"
            android:layout_width="wrap_content"
            android:ems="12"
            android:onClick="games_exit" />

        <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:text="@string/games_help"
            android:layout_marginTop="@dimen/md_16"
            android:id="@+id/games_times_view"
            android:ems="12" />

    </LinearLayout>
</ScrollView>

