<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="@dimen/navigation_height"
	android:layout_width="match_parent">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content"
		android:padding="@dimen/md_16"
		android:id="@+id/navigation_header_m_app_name"
		android:layout_above="@+id/navigation_header_saying_textview"
		android:layout_centerHorizontal="true"
		android:textSize="@dimen/text_size_large"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/saying"
		android:layout_width="wrap_content"
		android:id="@+id/navigation_header_saying_textview"
		android:padding="@dimen/normal_10"
		android:layout_above="@+id/navigation_header_app_version"
		android:layout_centerHorizontal="true"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/wrong"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="wrap_content"
		android:id="@+id/navigation_header_app_version"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:padding="@dimen/md_16"/>

</RelativeLayout>

